--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Eleveny Chen
 description: My personal repository
-author: Eleveny (Shiyi) Chen
+author: Eleveny (Shiyi) CHEN
 logo: https://avatars.githubusercontent.com/u/97559209?s=400&u=fcba20bdad6e942b7fe282f50b2d3a2479e9793b&v=4
 github: https://github.com/ElevenyChen
-about: Undergrad student at University of Michigan
+about: Undergrad student at University of Michigan, Communication and Media
 
 baseurl: ""
 url: ""
