--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: My personal repository
 author: Eleveny (Shiyi) CHEN
 logo: https://avatars.githubusercontent.com/u/97559209?s=400&u=fcba20bdad6e942b7fe282f50b2d3a2479e9793b&v=4
 github: https://github.com/ElevenyChen
-about: 
+about: Go blue!
 
 baseurl: ""
 url: ""
