--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ github: https://github.com/ElevenyChen
 about: Go blue!
 
 baseurl: ""
-url: ""
+url: "https://elevenychen.github.io/"
 
 allowsearch: true
 
