--- a/_data/projects.json
+++ b/_data/projects.json
@@ -2,7 +2,7 @@
 	{
 		"name": "Cool project 2",
 		"image": "placeholder.jpg",
-		"url": "project_posts/2016-06-04-test-page.md",
+		"url": "/2016-06-04-test-page.md",
 		"date": "May 2014",
 		"tags": ["Android","PHP"]
 	},
