--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,10 +1,10 @@
 [
 	{
-		"name": "Cool project 2",
-		"image": "placeholder.jpg",
-		"url": "/2016-06-04-test-page.md",
-		"date": "May 2014",
-		"tags": ["Android","PHP"]
+		"name": "PPM File Adjustment Algorithms",
+		"image": "pv-fundation.png",
+		"url": "https://elevenychen.github.io/algorithms/2022/11/20/PPM-File-Adjustment-Algorithms.html",
+		"date": "July 2020",
+		"tags": ["Machine Learning","C/C++","Graph"]
 	},
 	{
 		"name": "Cool project 3",
