--- a/_data/projects.json
+++ b/_data/projects.json
@@ -15,7 +15,7 @@
 	},
 	{
 		"name": "Database Query Language (SimpleQL)",
-		"image": "placeholder.jpg",
+		"image": "SQL.png",
 		"url": "https://elevenychen.github.io/algorithms/2022/11/21/database-query-language.html",
 		"date": "November 2022",
 		"tags": ["Database","C/C++"]
